force-app/main/default/objects/ARF_Saved_View__c/ARF_Saved_View__c.object-meta.xml
<CustomObject>
    <description>User-defined saved views for AR invoice list with custom columns, filters, and sort preferences</description>
    <label>AR Saved View</label>
    <nameField>
        <displayFormat>ARFV-{0000}</displayFormat>
        <label>View Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Saved Views</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>