force-app/main/default/objects/ARF_Saved_View__c/fields/Column_Config__c.field-meta.xml
<CustomField>
    <fullName>Column_Config__c</fullName>
    <description>JSON array of column API names and display settings for this view</description>
    <label>Column Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>