force-app/main/default/objects/ARF_Saved_View__c/fields/Filter_Config__c.field-meta.xml
<CustomField>
    <fullName>Filter_Config__c</fullName>
    <description>JSON array of filter criteria (field, operator, value, dataType) for this view</description>
    <label>Filter Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>