force-app/main/default/objects/ARF_Saved_View__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <defaultValue>&quot;ARF_Invoice__c&quot;</defaultValue>
    <description>API name of the target object this view applies to</description>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>