force-app/main/default/objects/ARF_Saved_View__c/fields/Sort_Direction__c.field-meta.xml
<CustomField>
    <fullName>Sort_Direction__c</fullName>
    <description>Sort direction for this view - asc or desc</description>
    <label>Sort Direction</label>
    <length>10</length>
    <type>Text</type>
</CustomField>