force-app/main/default/objects/ARF_Saved_View__c/fields/Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>Sort_Field__c</fullName>
    <description>API name of the field to sort by in this view</description>
    <label>Sort Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>