force-app/main/default/objects/ARF_Saved_View__c/fields/View_Name__c.field-meta.xml
<CustomField>
    <fullName>View_Name__c</fullName>
    <description>User-visible name for this saved view</description>
    <label>View Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>